--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Brannon Lee - Portfolio Website"
     />
+    <meta name="title" property="og:title" content="Brannon Lee - portfolio" />
+    <meta property="og:type" content="portfolio" />
+    <meta name="image" property="og:image" content="https://i.postimg.cc/wB86Hz7R/splash.jpg" />
+    <meta name="description" property="og:description" content="Brannon Lee - Portfolio Website" />
+    <meta name="author" content="Brannon Lee" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
